<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<groupId>com.darkblade12.itemslotmachine</groupId>
	<artifactId>ItemSlotMachine</artifactId>
	<version>1.4</version>
	<build>
		<finalName>ItemSlotMachine</finalName>
	</build>
	<repositories>
		<repository>
			<id>Spigot</id>
			<url>https://hub.spigotmc.org/nexus/content/groups/public/</url>
		</repository>
	</repositories>
	<!-- Dependencies -->
	<dependencies>
		<dependency>
			<groupId>org.spigotmc</groupId>
			<artifactId>spigot</artifactId>
			<version>1.14.1-R0.1-SNAPSHOT</version>
			<scope>compile</scope>
		</dependency>
		<dependency>
			<groupId>net.milkbowl.vault</groupId>
			<artifactId>vault</artifactId>
			<version>1.7.2</version>
			<type>jar</type>
			<scope>system</scope>
			<systemPath>${basedir}/lib/Vault.jar</systemPath>
		</dependency>
	</dependencies>
	<properties>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
		<maven.compiler.source>1.8</maven.compiler.source>
		<maven.compiler.target>1.8</maven.compiler.target>
	</properties>
</project>
